yaml/allow-from-same-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-same-namespace
spec:
  podSelector:
  ingress: 
  - from:
    - podSelector: {}
